# simple-chess-client

./: .gitignore  CMakeLists.txt  build.sh
src/: main.cpp
